@@ -181,8 +181,7 @@ sub formbuilder (@) { #{{{
 			}
 		}
 
-		$filename=IkiWiki::linkpage(
-			IkiWiki::possibly_foolish_untaint(
+		$filename=linkpage(IkiWiki::possibly_foolish_untaint(
 				attachment_location($form->field('page')).
 				IkiWiki::basename($filename)));
 		if (IkiWiki::file_pruned($filename, $config{srcdir})) {
