@@ -411,7 +411,7 @@ I'm sure that this is documented somewhere but I've ransacked the wiki and I can
 > The default `wiki_file_regexp` matches filenames containing only
 > `[-[:alnum:]_.:/+]`
 > 
-> The IkiWiki::titlepage() function will convert freeform text to a valid
+> The titlepage() function will convert freeform text to a valid
 > page name. See [[todo/should_use_a_standard_encoding_for_utf_chars_in_filenames]]
 > for an example. --[[Joey]]
 
