@@ -12,6 +12,7 @@ ikiwiki (2.66) UNRELEASED; urgency=low
     scrubber acting on a set of pages.
   * Expand usage message and add --help. Closes: #500344
   * Beautify urls used in various places. (smcv)
+  * Export pagetitle, titlepage, linkpage.
 
  -- Joey Hess <joeyh@debian.org>  Thu, 25 Sep 2008 13:45:55 -0400
 
